--- a/Styles/porfolio.css
+++ b/Styles/porfolio.css
@@ -24,6 +24,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 
 .nav-title{
@@ -40,10 +41,25 @@ nav > ul{
 nav li{
     list-style: none;
     margin-right: 50px;
-    font-weight: 400px;
 }
 
 nav a{
     text-decoration: none;
     color: #474747;
+}
+
+/* header releated style */
+.header{
+    background: #FFF8F3;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-pic{
+    width: 500px;
+    
 }
