--- a/Styles/porfolio.css
+++ b/Styles/porfolio.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
-
 /* common shared styles */
-body{
+body {
+    font-family: 'lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -24,11 +23,11 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 200px;
+    margin: 0 200px;
 }
 
 .nav-title{
-    color: var(--Dark-01, #181818);
+    color: #181818;
     font-size: 45px;
     font-weight: 800;
 }
