--- a/Styles/porfolio.css
+++ b/Styles/porfolio.css
@@ -1,64 +1,123 @@
 /* common shared styles */
 body {
-    font-family: 'lato', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+  font-family: "lato", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-.text-primary{
-    color: #FD6E0A;
+.text-primary {
+  color: #fd6e0a;
 }
 
-.btn-primary{
-    border-radius: 5px;
-    background: #FD6E0A;
-    border: 0px;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 18px 35px;
+.btn-primary {
+  border-radius: 5px;
+  background: #fd6e0a;
+  border: 0px;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 18px 35px;
+}
+
+.contact-btn {
+  background-color: #fff8f3;
+  color: #fd6e0a;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  border-radius: 5px;
+  border: 1px solid #fd6e0a;
+  margin-left: 30px;
+}
+
+.section-title {
+  color: black;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
 }
 
 /* nav related styels */
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 200px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 200px;
 }
 
-.nav-title{
-    color: #181818;
-    font-size: 45px;
-    font-weight: 800;
+.nav-title {
+  color: #181818;
+  font-size: 45px;
+  font-weight: 800;
 }
 
-nav > ul{
-    display: flex;
-    align-items: center;
+nav > ul {
+  display: flex;
+  align-items: center;
 }
 
-nav li{
-    list-style: none;
-    margin-right: 50px;
+nav li {
+  list-style: none;
+  margin-right: 50px;
 }
 
-nav a{
-    text-decoration: none;
-    color: #474747;
+nav a {
+  text-decoration: none;
+  color: #474747;
 }
 
 /* header releated style */
-.header{
-    background: #FFF8F3;
+.header {
+  background: #fff8f3;
+  background-image: url(../images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
-.banner{
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
+.banner {
+  padding: 30px 30px 0 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.banner .profile-pic{
-    width: 500px;
-    
+.banner .profile-pic {
+  width: 500px;
+}
+
+.banner-content {
+  max-width: 500px;
+}
+
+.banner-greeting {
+  font-size: 45px;
+  color: #474747;
+  margin-bottom: 0;
+}
+
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.banner-description {
+  margin-top: 20px;
+}
+
+/* main section styles */
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+    margin: 130px;
 }
