--- a/Styles/porfolio.css
+++ b/Styles/porfolio.css
@@ -75,7 +75,7 @@ nav a {
 /* header releated style */
 .header {
   background: #fff8f3;
-  background-image: url(../images/header_bg.png);
+  background-image: url('../images/header_bg.png');
   background-repeat: no-repeat;
   background-position: bottom right;
 }
@@ -113,11 +113,32 @@ nav a {
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #fff8f3;
-    margin: 130px;
+    margin: 130px 0;
+}
+
+.user-info{
+    width: 100%;
+    text-align: center;
+}
+
+tbody th{
+    color: #757575;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+tbody tr{
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
 }
