resume content added

--- a/Styles/porfolio.css
+++ b/Styles/porfolio.css
@@ -75,7 +75,7 @@ nav a {
 /* header releated style */
 .header {
   background: #fff8f3;
-  background-image: url('../images/header_bg.png');
+  background-image: url("../images/header_bg.png");
   background-repeat: no-repeat;
   background-position: bottom right;
 }
@@ -113,32 +113,70 @@ nav a {
 }
 
 /* main section styles */
-main{
-    max-width: 1140px;
-    margin: 0 auto;
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+main section {
+  margin-top: 130px;
 }
 
 /* about section styles */
 .about {
-    padding: 130px;
-    border-radius: 10px;
-    background: #fff8f3;
-    margin: 130px 0;
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px 0;
 }
 
-.user-info{
-    width: 100%;
-    text-align: center;
+.user-info {
+  width: 100%;
+  text-align: center;
 }
 
-tbody th{
-    color: #757575;
-    font-weight: 400;
-    font-size: 20px;
+tbody th {
+  color: #757575;
+  font-weight: 400;
+  font-size: 20px;
 }
 
-tbody tr{
-    color: #474747;
-    font-size: 20px;
-    font-weight: 700;
+tbody tr {
+  color: #474747;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+#what-i-do-description {
+  padding: 30px 150px;
+}
+
+/* skills related styles */
+
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+  color: #757575;
+}
+
+/* resume section styles */
+
+.resume-container{
+    display: flex;
+}
+
+.resume-column-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
 }
