finished upto resume section

--- a/Styles/porfolio.css
+++ b/Styles/porfolio.css
@@ -173,10 +173,31 @@ tbody tr {
 
 .resume-container{
     display: flex;
+    gap: 70px;
 }
 
 .resume-column-title {
   color: #474747;
   font-size: 30px;
   font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.resume-item-description{
+    color: #757575;
+}
+
+.resume-item-institute{
+    color: #757575;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.resume-container hr{
+    margin: 30px;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
